vc-refactoring/htdocs/css/browser.css
#prefs { margin-top: -1.6em }
* html #prefs { width: 34em } /* Set width only for IE */
#prefs fieldset label { display: block }
#prefs .buttons { margin-top: -1.6em }
#prefs .button { margin-left: 1.6em }
#prefs .choice { margin-top: -0.6em }
#prefs .rev { align: right }

#legend { clear: right; }

/* Browser */
h1 { margin: 0; padding: 0 0 .5em }
h1 :link, h1 :visited, h1 .filename { border: none; padding: 0 .2em }
h1 :link, h1 :visited { color: #b00 }
h1 .first:link, h1 .first:visited { color: #998 }
h1 .sep { color: #666; padding: 0 .1em }

#jumprev { float: right; font-size: 10px; margin: 0 0 0 }
#jumprev form { margin: 0 }
#jumprev input { font-size: 10px; margin-right: 0 }

/* Styles for the directory entries table
   (extends the styles for "table.listing") */
#dirlist { margin-top: 0 }
#dirlist td.rev, #dirlist td.age, #dirlist td.change {
 color: #888;
 white-space: nowrap;
}
#dirlist td.size {  
 color: #888;
 white-space: nowrap;
 text-align: right;
 vertical-align: middle;
 font-size: 70%;
}
#dirlist td.name { width: 100% }
#dirlist td.name a, #dirlist td.name span {
 background-position: 0% 50%;
 background-repeat: no-repeat;
 padding-left: 20px;
}
#dirlist td.name a.parent { background-image: url(../parent.png) }
#dirlist td.name a.dir { background-image: url(../folder.png) }
#dirlist td.name span.dir { background-image: url(../folderdeny.png) }
#dirlist td.name a.file { background-image: url(../file.png) }
#dirlist td.name span.file { background-image: url(../filedeny.png) }
#dirlist td.name a, #dirlist td.rev a { border-bottom: none; display: block }
#dirlist td.rev { text-align: right }
#dirlist td.change { font-size: 85%; vertical-align: middle; white-space: nowrap }

/* Styles for the revision log table
   (extends the styles for "table.listing") */
#chglist { margin-top: 0 }
#chglist td.change span { 
 border: 1px solid #999;
 display: block;
 margin: .2em .5em 0 0;
 width: .8em; height: .8em;
}
#chglist td.change .comment { display: none }
#chglist td.old_path { font-style: italic }
#chglist td.date { font-size: 85%; vertical-align: top; padding-top: 0.55em; white-space: nowrap }
#chglist td.author { font-size: 85%; vertical-align: top; padding-top: 0.55em }
#chglist td.rev, #chglist td.chgset { text-align: right }
#chglist td.rev a, #chglist td.chgset a { border-bottom: none }
#chglist td.summary { width: 100%; font-size: 85%; vertical-align: middle; white-space: nowrap }
#chglist td.summary * { margin-top: 0; margin-bottom: 0 }

#paging { margin: 1em 0 }

/* Styles for the revision info in the file view */
#info {
 background: #f7f7f0;
 border: 1px solid #d7d7d7;
 border-collapse: collapse;
 border-spacing: 0;
 clear: both;
 width: 100%;
}
#info th, #info td { font-size: 85%; padding: 2px .5em; vertical-align: top }
#info th { font-weight: bold; white-space: nowrap; }
#info td.message { width: 100%; }
#info .message ul { padding: 0; margin: 0 2em }
#info .message p { margin: 0; padding: 0 }
#info .props {
 color: #666;
 list-style: square;
 margin: 0 0 .4em 1.6em;
 padding: 0;
}
#info .props li { padding: 0 }

/* Styles for the HTML preview */
#preview { background: #fff; clear: both; margin: 0 }
#preview .code-block { border-top: 1px solid #999; margin: 0 }
#preview .image-file { overflow: hidden }
#preview .image-file img { max-width: 100% }

